--- a/Game_01/.classpath
+++ b/Game_01/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry excluding="Images/Blocks/|Images/Images/" kind="src" path="src"/>
 	<classpathentry kind="src" path="Images"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="C:/Users/Chris/Desktop/Games/Test Proj/Beta TESTA/Brandish-BETA_TESTA.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
